Add hexagonal and tetragonal symmetries
Address issue #141

Add the symmetry operations for hexagonal and tetragonal crystals.

--- a/notebooks/GSH.ipynb
+++ b/notebooks/GSH.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c91792327b84ab65491a662f90b76dced8173276a443ed4697a1519ff3850a55"
+  "signature": "sha256:9a54236a45e52423683179ca2754433e0ff7c3295d35bb11ceadb3322e907866"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,7 +18,8 @@
       "\n",
       "import numpy as np\n",
       "import matplotlib.pyplot as plt\n",
-      "import sympy as sy"
+      "import sympy as sy\n",
+      "import math"
      ],
      "language": "python",
      "metadata": {},
@@ -36,13 +37,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "phi1, Phi, phi2, m, n, l = sy.Symbol('phi1'), sy.Symbol('Phi'), sy.Symbol('phi2'), sy.Symbol('m'), sy.Symbol('n'), sy.Symbol('l')\n",
-      "\n",
-      "P = sy.Function('P')\n",
-      "Q = P(l * m * n * Phi)\n",
-      "\n",
-      "#T = sy.Function('T')\n",
-      "#T((-1))"
+      "phi1, Phi, phi2, m, n, l = sy.Symbol('phi1'), sy.Symbol('Phi'), sy.Symbol('phi2'), sy.Symbol('m'), sy.Symbol('n'), sy.Symbol('l')"
      ],
      "language": "python",
      "metadata": {},
@@ -53,74 +48,17 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from sympy.utilities.lambdify import lambdify, implemented_function\n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "f = implemented_function(sy.Function('f'), lambda Phi, l, m, n: l * m * n * Phi)\n",
-      "lam_f = lambdify((Phi, l, m , n), f(Phi, l, m , n))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "lam_f(1, 2, 5, 1)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 5,
-       "text": [
-        "10"
-       ]
-      }
-     ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import math\n",
       "def legendre(l, m, n, Phi):\n",
       "    norm1 = (((-1) ** (l - m) * np.complex(0, 1) ** (n - m)) / ((2. ** l) * math.factorial(l - m)))\n",
       "    norm2 = math.sqrt(float(math.factorial(l - m) * math.factorial(l + n)) / float(math.factorial(l + m) * math.factorial(l - n)))\n",
       "    poly1 = (1. - sy.cos(Phi)) ** (-(n - m) / 2.) * (1. + sy.cos(Phi)) ** (-(n + m) / 2.)\n",
-      "    poly2 = poly_diff(l, m, n, Phi)\n",
+      "    poly2 = sy.diff((1. - sy.cos(Phi)) ** (l-m) * (1. + sy.cos(Phi)) ** (l + m), sy.cos(Phi), (l - n))\n",
       "    return norm1 * norm2 * poly1 * poly2"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def poly_diff(l, m, n, Phi):\n",
-      "    return sy.diff((1. - sy.cos(Phi)) ** (l-m) * (1. + sy.cos(Phi)) ** (l + m), sy.cos(Phi), (l - n))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -134,13 +72,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 4,
        "text": [
         "1.0*cos(Phi)"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -160,7 +98,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -174,13 +112,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 6,
        "text": [
         "0.5*(cos(Phi) + 1.0)**1.0*exp(1.0*I*phi1)*exp(1.0*I*phi2)"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -193,7 +131,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "cubic_sym = np.zeros(((3, 3, 24)))\n",
+      "cubic_sym = np.zeros((3, 3, 24))\n",
       "cubic_sym[:,:,0] = [[ 1, 0, 0], [ 0, 1, 0], [ 0, 0, 1]] \n",
       "cubic_sym[:,:,1] = [[ 1, 0, 0], [ 0,-1, 0], [ 0, 0,-1]] \n",
       "cubic_sym[:,:,2] = [[ 1, 0, 0], [ 0, 0,-1], [ 0, 1, 0]] \n",
@@ -203,7 +141,7 @@
       "cubic_sym[:,:,6] = [[-1, 0, 0], [ 0, 0,-1], [ 0,-1, 0]] \n",
       "cubic_sym[:,:,7] = [[-1, 0, 0], [ 0, 0, 1], [ 0, 1, 0]]\n",
       "cubic_sym[:,:,8] = [[ 0, 1, 0], [-1, 0, 0], [ 0, 0, 1]]\n",
-      "cubic_sym[:,:,9] =[[ 0, 1, 0], [ 0, 0,-1], [-1, 0, 0]] \n",
+      "cubic_sym[:,:,9] = [[ 0, 1, 0], [ 0, 0,-1], [-1, 0, 0]] \n",
       "cubic_sym[:,:,10] =[[ 0, 1, 0], [ 1, 0, 0], [ 0, 0,-1]] \n",
       "cubic_sym[:,:,11] =[[ 0, 1, 0], [ 0, 0, 1], [ 1, 0, 0]]\n",
       "cubic_sym[:,:,12] =[[ 0,-1, 0], [ 1, 0, 0], [ 0, 0, 1]] \n",
@@ -222,123 +160,65 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 32
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Hexagonal Symmetries"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "for ii in range(24):\n",
-      "    print cubic_sym[..., ii]\n",
-      "    print ''"
+      "a = np.sqrt(3) / 2\n",
+      "# a = sy.Symbol('a')\n",
+      "hcp_sym = np.zeros((3, 3, 12))\n",
+      "hcp_sym[..., 0] = [[ 1, 0, 0], [ 0, 1, 0], [ 0, 0, 1]]\n",
+      "hcp_sym[..., 1] = [[-.5, a, 0], [-a,-.5, 0], [ 0, 0, 1]]\n",
+      "hcp_sym[..., 2] = [[-.5,-a, 0], [ a,-.5, 0], [ 0, 0, 1]]\n",
+      "hcp_sym[..., 3] = [[.5, a, 0], [-a,.5, 0], [ 0, 0, 1]]\n",
+      "hcp_sym[..., 4] = [[.5,-a, 0], [a, .5, 0], [ 0, 0, 1]]\n",
+      "hcp_sym[..., 5] = [[-1, 0, 0], [ 0,-1, 0], [ 0, 0, 1]]\n",
+      "hcp_sym[..., 6] = [[-.5,-a, 0], [-a, .5, 0], [ 0, 0,-1]]\n",
+      "hcp_sym[..., 7] = [[ 1, 0, 0], [ 0,-1, 0], [ 0, 0,-1]]\n",
+      "hcp_sym[..., 8] = [[-.5, a, 0], [ a, .5, 0], [ 0, 0,-1]]\n",
+      "hcp_sym[..., 9] = [[ .5, a, 0], [ a,-.5, 0], [ 0, 0,-1]]\n",
+      "hcp_sym[..., 10] = [[-1, 0, 0], [ 0, 1, 0], [ 0, 0,-1]]\n",
+      "hcp_sym[..., 11] = [[ .5,-a, 0], [-a,-.5, 0], [ 0, 0,-1]]"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[[ 1.  0.  0.]\n",
-        " [ 0.  1.  0.]\n",
-        " [ 0.  0.  1.]]\n",
-        "\n",
-        "[[ 1.  0.  0.]\n",
-        " [ 0. -1.  0.]\n",
-        " [ 0.  0. -1.]]\n",
-        "\n",
-        "[[ 1.  0.  0.]\n",
-        " [ 0.  0. -1.]\n",
-        " [ 0.  1.  0.]]\n",
-        "\n",
-        "[[ 1.  0.  0.]\n",
-        " [ 0.  0.  1.]\n",
-        " [ 0. -1.  0.]]\n",
-        "\n",
-        "[[-1.  0.  0.]\n",
-        " [ 0.  1.  0.]\n",
-        " [ 0.  0. -1.]]\n",
-        "\n",
-        "[[-1.  0.  0.]\n",
-        " [ 0. -1.  0.]\n",
-        " [ 0.  0.  1.]]\n",
-        "\n",
-        "[[-1.  0.  0.]\n",
-        " [ 0.  0. -1.]\n",
-        " [ 0. -1.  0.]]\n",
-        "\n",
-        "[[-1.  0.  0.]\n",
-        " [ 0.  0.  1.]\n",
-        " [ 0.  1.  0.]]\n",
-        "\n",
-        "[[ 0.  1.  0.]\n",
-        " [-1.  0.  0.]\n",
-        " [ 0.  0.  1.]]\n",
-        "\n",
-        "[[ 0.  1.  0.]\n",
-        " [ 0.  0. -1.]\n",
-        " [-1.  0.  0.]]\n",
-        "\n",
-        "[[ 0.  1.  0.]\n",
-        " [ 1.  0.  0.]\n",
-        " [ 0.  0. -1.]]\n",
-        "\n",
-        "[[ 0.  1.  0.]\n",
-        " [ 0.  0.  1.]\n",
-        " [ 1.  0.  0.]]\n",
-        "\n",
-        "[[ 0. -1.  0.]\n",
-        " [ 1.  0.  0.]\n",
-        " [ 0.  0.  1.]]\n",
-        "\n",
-        "[[ 0. -1.  0.]\n",
-        " [ 0.  0. -1.]\n",
-        " [ 1.  0.  0.]]\n",
-        "\n",
-        "[[ 0. -1.  0.]\n",
-        " [-1.  0.  0.]\n",
-        " [ 0.  0. -1.]]\n",
-        "\n",
-        "[[ 0. -1.  0.]\n",
-        " [ 0.  0.  1.]\n",
-        " [-1.  0.  0.]]\n",
-        "\n",
-        "[[ 0.  0.  1.]\n",
-        " [ 0.  1.  0.]\n",
-        " [-1.  0.  0.]]\n",
-        "\n",
-        "[[ 0.  0.  1.]\n",
-        " [ 1.  0.  0.]\n",
-        " [ 0.  1.  0.]]\n",
-        "\n",
-        "[[ 0.  0.  1.]\n",
-        " [ 0. -1.  0.]\n",
-        " [ 1.  0.  0.]]\n",
-        "\n",
-        "[[ 0.  0.  1.]\n",
-        " [-1.  0.  0.]\n",
-        " [ 0. -1.  0.]]\n",
-        "\n",
-        "[[ 0.  0. -1.]\n",
-        " [ 0.  1.  0.]\n",
-        " [ 1.  0.  0.]]\n",
-        "\n",
-        "[[ 0.  0. -1.]\n",
-        " [-1.  0.  0.]\n",
-        " [ 0.  1.  0.]]\n",
-        "\n",
-        "[[ 0.  0. -1.]\n",
-        " [ 0. -1.  0.]\n",
-        " [-1.  0.  0.]]\n",
-        "\n",
-        "[[ 0.  0. -1.]\n",
-        " [ 1.  0.  0.]\n",
-        " [ 0. -1.  0.]]\n",
-        "\n"
-       ]
-      }
+     "outputs": [],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#Tetragonal Symmetries"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "tetrag_sym = np.zeros((3, 3, 8))\n",
+      "tetrag_sym[..., 0] = [[ 1, 0, 0], [ 0, 1, 0], [ 0, 0, 1]]\n",
+      "tetrag_sym[..., 1] = [[-1, 0, 0], [ 0, 1, 0], [ 0, 0,-1]]\n",
+      "tetrag_sym[..., 2] = [[ 1, 0, 0], [ 0,-1, 0], [ 0, 0,-1]]\n",
+      "tetrag_sym[..., 3] = [[-1, 0, 0], [ 0,-1, 0], [ 0, 0, 1]]\n",
+      "tetrag_sym[..., 4] = [[ 0, 1, 0], [-1, 0, 0], [ 0, 0, 1]]\n",
+      "tetrag_sym[..., 5] = [[ 0,-1, 0], [ 1, 0, 0], [ 0, 0, 1]]\n",
+      "tetrag_sym[..., 6] = [[ 0, 1, 0], [ 1, 0, 0], [ 0, 0,-1]]\n",
+      "tetrag_sym[..., 7] = [[ 0,-1, 0], [-1, 0, 0], [ 0, 0,-1]]"
      ],
-     "prompt_number": 35
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -346,7 +226,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 9
     }
    ],
    "metadata": {}
