Find solutions to symmetry operations
Address issue #141

Find solutions for cubic symmetry operations on the Bunge-Euler
rotation matrix

--- a/notebooks/GSH.ipynb
+++ b/notebooks/GSH.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9a54236a45e52423683179ca2754433e0ff7c3295d35bb11ceadb3322e907866"
+  "signature": "sha256:29db6c4f9fe9c1da47374233f44062bace36188d4b953e113124db28e5695ab7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -221,13 +221,84 @@
      "prompt_number": 9
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#Orientation Matrix for Bungee-Euler Representations"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "orientation1 = sy.Matrix([[sy.cos(phi2), sy.sin(phi2), 0], [-sy.sin(phi2), sy.cos(phi2), 0], [0, 0, 1]])\n",
+      "orientation2 = sy.Matrix([ [1, 0, 0], [0, sy.cos(Phi), sy.sin(Phi)], [0, -sy.sin(Phi), sy.cos(Phi)]])\n",
+      "orientation3 = sy.Matrix([[sy.cos(phi1), sy.sin(phi1), 0], [-sy.sin(phi1), sy.cos(phi1), 0], [0, 0, 1]])\n",
+      "\n",
+      "orientaiton_matrix = orientation1 * orientation2 * orientation3"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a, b, c = sy.Symbol('a'), sy.Symbol('b'), sy.Symbol('c')\n",
+      "orientation1a = sy.Matrix([[sy.cos(phi2 + c), sy.sin(phi2 + c), 0], [-sy.sin(phi2 + c), sy.cos(phi2 + c), 0], [0, 0, 1]])\n",
+      "orientation2b = sy.Matrix([ [1, 0, 0], [0, sy.cos(Phi + b), sy.sin(Phi + b)], [0, -sy.sin(Phi + b), sy.cos(Phi + b)]])\n",
+      "orientation3c = sy.Matrix([[sy.cos(phi1 + a), sy.sin(phi1 + a), 0], [-sy.sin(phi1 + a), sy.cos(phi1 + a), 0], [0, 0, 1]])\n",
+      "\n",
+      "orientaiton_matrixabc = orientation1a * orientation2b * orientation3c"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cubic_sols = []\n",
+      "for ii in range(24):\n",
+      "    system = cubic_sym[..., ii] * orientaiton_matrix - orientaiton_matrixabc\n",
+      "    sol = sy.solve(system, a, b, c)\n",
+      "    cubic_sols.append(sy.simplify(sol[0]))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 109
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print cubic_sols"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[(-phi1 - asin(1.0*sin(phi1)), -Phi + acos(cos(Phi)), -phi2 - asin(1.0*sin(phi2))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(-cos(Phi)), -phi2 + acos(-1.0*cos(phi2))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*cos(Phi)*cos(phi2) + sin(phi2)*cos(phi1))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(sin(Phi)*cos(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*sin(phi2) - cos(Phi)*cos(phi1)*cos(phi2))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*cos(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(-cos(Phi)), -phi2 - asin(1.0*sin(phi2))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(cos(Phi)), -phi2 - asin(1.0*sin(phi2))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*sin(phi2) - cos(Phi)*cos(phi1)*cos(phi2))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*cos(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*cos(Phi)*cos(phi2) + sin(phi2)*cos(phi1))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(sin(Phi)*cos(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(cos(Phi)), -phi2 + acos(-1.0*sin(phi2))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*sin(phi2)*cos(Phi) - cos(phi1)*cos(phi2))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*sin(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(-cos(Phi)), -phi2 + acos(-1.0*sin(phi2))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*cos(phi2) + sin(phi2)*cos(Phi)*cos(phi1))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(sin(Phi)*sin(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(cos(Phi)), -phi2 - asin(1.0*cos(phi2))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*cos(phi2) + sin(phi2)*cos(Phi)*cos(phi1))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(sin(Phi)*sin(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(-cos(Phi)), -phi2 + acos(-1.0*sin(phi2))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*sin(phi2)*cos(Phi) - cos(phi1)*cos(phi2))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*sin(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*sin(phi2)*cos(Phi) - cos(phi1)*cos(phi2))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*sin(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*cos(Phi)*cos(phi2) + sin(phi2)*cos(phi1))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(sin(Phi)*cos(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*cos(phi2) + sin(phi2)*cos(Phi)*cos(phi1))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(sin(Phi)*sin(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*sin(phi2) - cos(Phi)*cos(phi1)*cos(phi2))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*cos(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*cos(phi2) + sin(phi2)*cos(Phi)*cos(phi1))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(sin(Phi)*sin(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*cos(Phi)*cos(phi2) + sin(phi2)*cos(phi1))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(sin(Phi)*cos(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*sin(phi2)*cos(Phi) - cos(phi1)*cos(phi2))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*sin(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*sin(phi2) - cos(Phi)*cos(phi1)*cos(phi2))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*cos(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0))))]\n"
+       ]
+      }
+     ],
+     "prompt_number": 110
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": []
     }
    ],
    "metadata": {}
