--- a/notebooks/GSH.ipynb
+++ b/notebooks/GSH.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:29db6c4f9fe9c1da47374233f44062bace36188d4b953e113124db28e5695ab7"
+  "signature": "sha256:a0b726046cddeb91ad998994006ba42f6ea62ca2b98d53012dc86e9e51113cad"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -24,7 +24,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -42,29 +42,30 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def legendre(l, m, n, Phi):\n",
-      "    norm1 = (((-1) ** (l - m) * np.complex(0, 1) ** (n - m)) / ((2. ** l) * math.factorial(l - m)))\n",
-      "    norm2 = math.sqrt(float(math.factorial(l - m) * math.factorial(l + n)) / float(math.factorial(l + m) * math.factorial(l - n)))\n",
-      "    poly1 = (1. - sy.cos(Phi)) ** (-(n - m) / 2.) * (1. + sy.cos(Phi)) ** (-(n + m) / 2.)\n",
-      "    poly2 = sy.diff((1. - sy.cos(Phi)) ** (l-m) * (1. + sy.cos(Phi)) ** (l + m), sy.cos(Phi), (l - n))\n",
-      "    return norm1 * norm2 * poly1 * poly2"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "legendre(1, 0, 0, Phi)"
+      "def legendre(l, m, n, Phi):\n",
+      "    norm1 = (((-1) ** (l - m) * np.complex(0, 1) ** (n - m)) / ((2. ** l) * sy.factorial(l - m)))\n",
+      "    norm2 = sy.sqrt((sy.factorial(l - m) * sy.factorial(l + n)) / (sy.factorial(l + m) * sy.factorial(l - n)))\n",
+      "    poly1 = (1. - sy.cos(Phi)) ** (-(n - m) / 2.) * (1. + sy.cos(Phi)) ** (-(n + m) / 2.)\n",
+      "    poly2 = sy.diff((1. - sy.cos(Phi)) ** (l-m) * (1. + sy.cos(Phi)) ** (l + m), sy.cos(Phi), (l - n))\n",
+      "    return norm1 * norm2 * poly1 * poly2, norm1, norm2, poly2\n",
+      "#     return norm1"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "legendre(1, 1, 1, Phi)"
      ],
      "language": "python",
      "metadata": {},
@@ -72,13 +73,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 39,
        "text": [
-        "1.0*cos(Phi)"
+        "(0.5*(cos(Phi) + 1.0)**1.0, 0.500000000000000, 1, (cos(Phi) + 1.0)**2)"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 39
     },
     {
      "cell_type": "markdown",
@@ -97,28 +98,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "GSH(1, 1, 1, phi1, Phi, phi2)"
+      "GSH(1, 1, n, phi1, Phi, phi2)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 6,
-       "text": [
-        "0.5*(cos(Phi) + 1.0)**1.0*exp(1.0*I*phi1)*exp(1.0*I*phi2)"
-       ]
-      }
-     ],
-     "prompt_number": 6
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -159,8 +149,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -191,8 +180,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -217,8 +205,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -239,8 +226,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 15
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -255,8 +241,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -270,27 +255,112 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 109
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#Symmetrize GSH"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print cubic_sols"
+      "print cubic_sols[1]\n",
+      "s, n  = sy.Symbol('s'), sy.Symbol('n')\n",
+      "delta_funct = sy.KroneckerDelta(s,n)\n",
+      "type(cubic_sols[0])\n",
+      "\n",
+      "GSH(1,1,2,2,2,2)\n",
+      "\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[(-phi1 - asin(1.0*sin(phi1)), -Phi + acos(cos(Phi)), -phi2 - asin(1.0*sin(phi2))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(-cos(Phi)), -phi2 + acos(-1.0*cos(phi2))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*cos(Phi)*cos(phi2) + sin(phi2)*cos(phi1))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(sin(Phi)*cos(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*sin(phi2) - cos(Phi)*cos(phi1)*cos(phi2))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*cos(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(-cos(Phi)), -phi2 - asin(1.0*sin(phi2))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(cos(Phi)), -phi2 - asin(1.0*sin(phi2))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*sin(phi2) - cos(Phi)*cos(phi1)*cos(phi2))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*cos(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*cos(Phi)*cos(phi2) + sin(phi2)*cos(phi1))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(sin(Phi)*cos(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(cos(Phi)), -phi2 + acos(-1.0*sin(phi2))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*sin(phi2)*cos(Phi) - cos(phi1)*cos(phi2))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*sin(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(-cos(Phi)), -phi2 + acos(-1.0*sin(phi2))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*cos(phi2) + sin(phi2)*cos(Phi)*cos(phi1))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(sin(Phi)*sin(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(cos(Phi)), -phi2 - asin(1.0*cos(phi2))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*cos(phi2) + sin(phi2)*cos(Phi)*cos(phi1))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(sin(Phi)*sin(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sin(phi1)), -Phi + acos(-cos(Phi)), -phi2 + acos(-1.0*sin(phi2))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*sin(phi2)*cos(Phi) - cos(phi1)*cos(phi2))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*sin(phi2)), -phi2 + acos(-sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*sin(phi2)*cos(Phi) - cos(phi1)*cos(phi2))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*sin(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*cos(Phi)*cos(phi2) + sin(phi2)*cos(phi1))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(sin(Phi)*cos(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*cos(phi2) + sin(phi2)*cos(Phi)*cos(phi1))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(sin(Phi)*sin(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*sin(phi2) - cos(Phi)*cos(phi1)*cos(phi2))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*cos(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*cos(phi2) + sin(phi2)*cos(Phi)*cos(phi1))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(sin(Phi)*sin(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*cos(Phi)*cos(phi2) + sin(phi2)*cos(phi1))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(sin(Phi)*cos(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0)))), (-phi1 - asin(1.0*sqrt(-(sin(phi1)*sin(phi2)*cos(Phi) - cos(phi1)*cos(phi2))**2/(sin(Phi)**2*sin(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*sin(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*sin(phi2)**2 - 1.0)))), (-phi1 + acos(-1.0*sqrt(-(sin(phi1)*sin(phi2) - cos(Phi)*cos(phi1)*cos(phi2))**2/(sin(Phi)**2*cos(phi2)**2 - 1))), -Phi + acos(-sin(Phi)*cos(phi2)), -phi2 - asin(sqrt(-cos(Phi)**2/(sin(Phi)**2*cos(phi2)**2 - 1.0))))]\n"
-       ]
-      }
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Solve for Symmertry coefficeients\n",
+      "solSubs = {phi1:0, Phi:0, phi2:0}\n",
+      "fSubs = {phi1:0, Phi:0, phi2:0}\n",
+      "l=1\n",
+      "for n in range(-l,l+1)\n",
+      "    \n",
+      "\n"
      ],
-     "prompt_number": 110
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Initiate Solutions\n",
+      "GSH_array = np.zeros((2, 3, 3, 3))\n",
+      "delta_array = np.zeros((2, 3, 3, 3))\n",
+      "solSubs = {phi1:0, Phi:0, phi2:0}\n",
+      "fSubs = {phi1:0, Phi:0, phi2:0}\n",
+      "l = 1\n",
+      "tmp = []\n",
+      "order = []\n",
+      "solist = []\n",
+      "# for nu in range(len(cubic_sols)):\n",
+      "for nu in range(1):\n",
+      "    solSubs[phi1] = cubic_sols[nu][0]\n",
+      "    solSubs[Phi] = cubic_sols[nu][1]\n",
+      "    solSubs[phi2] = cubic_sols[nu][2]\n",
+      "    for n in range(-l,l+1):\n",
+      "        for s in range(-l,l+1):\n",
+      "            for m in range(-l,l+1):\n",
+      "                index = (l, n, s, m)\n",
+      "                order.append(index)\n",
+      "                delta_array[index] = sy.KroneckerDelta(s,n)\n",
+      "                GSH_array[index] = sy.simplify((GSH(l,m,n,phi1,Phi,phi2)).subs(solSubs)).subs(fSubs).evalf()\n",
+      "                \n",
+      "print GSH_array "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "coeff_array = np.zeros_like(GSH_array)\n",
+      "sy.solve((sy.Matrix(coeff_array) * (sy.Matrix(GSH_array) - sy.Matrix(delta_array))), coe"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "solSubs = {phi1:1, Phi:3, phi2:0}\n",
+      "for kk in range(24):\n",
+      "    solSubs[Phi] = cubic_sols[kk][1]\n",
+      "#     subs{Phi0}\n",
+      "    print 'sols', solSubs\n",
+      "# (GSH(1,1,1,phi1,Phi,phi2)).subs(solSubs)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
