Symmetrizing GSH Functions
Address issue #141

Build an eigen value problem for symmetrizing GSH functions.

--- a/notebooks/GSH.ipynb
+++ b/notebooks/GSH.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a0b726046cddeb91ad998994006ba42f6ea62ca2b98d53012dc86e9e51113cad"
+  "signature": "sha256:c127d63a79e2f195028993df670208c345940ec086b30032de1b19402c766fb3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -24,7 +24,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -42,24 +42,23 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "def legendre(l, m, n, Phi):\n",
-      "    norm1 = (((-1) ** (l - m) * np.complex(0, 1) ** (n - m)) / ((2. ** l) * sy.factorial(l - m)))\n",
-      "    norm2 = sy.sqrt((sy.factorial(l - m) * sy.factorial(l + n)) / (sy.factorial(l + m) * sy.factorial(l - n)))\n",
+      "    norm1 = (((-1) ** (l - m) * np.complex(0, 1) ** (n - m)) / ((2. ** l) * math.factorial(l - m)))\n",
+      "    norm2 = math.sqrt(float(math.factorial(l - m) * sy.factorial(l + n)) / float(math.factorial(l + m) * math.factorial(l - n)))\n",
       "    poly1 = (1. - sy.cos(Phi)) ** (-(n - m) / 2.) * (1. + sy.cos(Phi)) ** (-(n + m) / 2.)\n",
       "    poly2 = sy.diff((1. - sy.cos(Phi)) ** (l-m) * (1. + sy.cos(Phi)) ** (l + m), sy.cos(Phi), (l - n))\n",
-      "    return norm1 * norm2 * poly1 * poly2, norm1, norm2, poly2\n",
-      "#     return norm1"
+      "    return norm1 * norm2 * poly1 * poly2"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 38
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -73,13 +72,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 39,
+       "prompt_number": 18,
        "text": [
-        "(0.5*(cos(Phi) + 1.0)**1.0, 0.500000000000000, 1, (cos(Phi) + 1.0)**2)"
+        "0.5*(cos(Phi) + 1.0)**1.0"
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -98,17 +97,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "GSH(1, 1, n, phi1, Phi, phi2)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -149,7 +139,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -180,7 +171,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -205,7 +197,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -226,7 +219,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -241,7 +235,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -255,7 +250,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -268,107 +264,85 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print cubic_sols[1]\n",
-      "s, n  = sy.Symbol('s'), sy.Symbol('n')\n",
-      "delta_funct = sy.KroneckerDelta(s,n)\n",
-      "type(cubic_sols[0])\n",
-      "\n",
-      "GSH(1,1,2,2,2,2)\n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# Solve for Symmertry coefficeients\n",
-      "solSubs = {phi1:0, Phi:0, phi2:0}\n",
-      "fSubs = {phi1:0, Phi:0, phi2:0}\n",
-      "l=1\n",
-      "for n in range(-l,l+1)\n",
-      "    \n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "# Initiate Solutions\n",
-      "GSH_array = np.zeros((2, 3, 3, 3))\n",
-      "delta_array = np.zeros((2, 3, 3, 3))\n",
-      "solSubs = {phi1:0, Phi:0, phi2:0}\n",
-      "fSubs = {phi1:0, Phi:0, phi2:0}\n",
-      "l = 1\n",
-      "tmp = []\n",
-      "order = []\n",
-      "solist = []\n",
-      "# for nu in range(len(cubic_sols)):\n",
-      "for nu in range(1):\n",
-      "    solSubs[phi1] = cubic_sols[nu][0]\n",
-      "    solSubs[Phi] = cubic_sols[nu][1]\n",
-      "    solSubs[phi2] = cubic_sols[nu][2]\n",
-      "    for n in range(-l,l+1):\n",
-      "        for s in range(-l,l+1):\n",
-      "            for m in range(-l,l+1):\n",
-      "                index = (l, n, s, m)\n",
-      "                order.append(index)\n",
+      "\n",
+      "def symGSH(l):\n",
+      "    GSH_array = np.zeros((2, 3, 3),dtype=complex)\n",
+      "    delta_array = np.zeros((2, 3, 3),dtype=complex)\n",
+      "    solSubs = {phi1:1e-32, Phi:1e-32, phi2:1e-32}\n",
+      "    fSubs = {phi1:1e-32, Phi:1e-32, phi2:1e-32}\n",
+      "    nu = len(cubic_sols)\n",
+      "\n",
+      "    order = []\n",
+      "    # for nu in range(len(cubic_sols)):\n",
+      "    for sol in range(2):\n",
+      "        solSubs[phi1] = cubic_sols[sol][0]\n",
+      "        solSubs[Phi] = cubic_sols[sol][1]\n",
+      "        solSubs[phi2] = cubic_sols[sol][2]\n",
+      "        for n in range(-l,l+1):\n",
+      "            for s in range(-l,l+1):\n",
+      "                index = (sol, s+l, n+l)\n",
+      "                order.append(index)            \n",
       "                delta_array[index] = sy.KroneckerDelta(s,n)\n",
-      "                GSH_array[index] = sy.simplify((GSH(l,m,n,phi1,Phi,phi2)).subs(solSubs)).subs(fSubs).evalf()\n",
-      "                \n",
-      "print GSH_array "
+      "                GSH_array[index] = sy.simplify((GSH(l,s,n,phi1,Phi,phi2)).subs(solSubs)).subs(fSubs).evalf()\n",
+      "    T = GSH_array - delta_array\n",
+      "    T = T.reshape(2*(2*l+1),(2*l+1))\n",
+      "    return T"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 98
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "coeff_array = np.zeros_like(GSH_array)\n",
-      "sy.solve((sy.Matrix(coeff_array) * (sy.Matrix(GSH_array) - sy.Matrix(delta_array))), coe"
+      "l = 1\n",
+      "T = symGSH(l)\n",
+      "print np.round(T)\n",
+      "np.linalg.eig(T)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "solSubs = {phi1:1, Phi:3, phi2:0}\n",
-      "for kk in range(24):\n",
-      "    solSubs[Phi] = cubic_sols[kk][1]\n",
-      "#     subs{Phi0}\n",
-      "    print 'sols', solSubs\n",
-      "# (GSH(1,1,1,phi1,Phi,phi2)).subs(solSubs)"
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[[ 0.+0.j  0.+0.j  0.+0.j]\n",
+        "  [ 0.+0.j  0.+0.j  0.+0.j]\n",
+        "  [ 0.+0.j  0.+0.j  0.+0.j]]\n",
+        "\n",
+        " [[-1.+0.j  0.+0.j  1.+0.j]\n",
+        "  [ 0.+0.j -2.+0.j  0.+0.j]\n",
+        "  [ 1.+0.j  0.+0.j -1.+0.j]]]\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 101,
+       "text": [
+        "(array([[  0.00e+00 +1.41e-16j,   3.16e-33 -1.67e-32j,  -5.93e-33 -1.41e-16j],\n",
+        "        [ -4.93e-32 -2.74e-48j,  -2.00e+00 -2.47e-32j,  -2.00e+00 +0.00e+00j]]),\n",
+        " array([[[ -5.00e-01 +1.90e-16j,   7.07e-01 +0.00e+00j,\n",
+        "            5.00e-01 -8.09e-19j],\n",
+        "         [  7.07e-01 +0.00e+00j,   2.63e-16 -2.23e-16j,\n",
+        "            7.07e-01 +0.00e+00j],\n",
+        "         [ -5.00e-01 -3.25e-17j,  -7.07e-01 +6.94e-17j,\n",
+        "            5.00e-01 +1.50e-16j]],\n",
+        " \n",
+        "        [[  7.07e-01 -8.66e-17j,  -7.07e-01 +8.66e-17j,\n",
+        "           -8.95e-33 +2.78e-17j],\n",
+        "         [  8.66e-33 +7.07e-17j,   8.66e-33 +7.07e-17j,\n",
+        "            1.00e+00 +0.00e+00j],\n",
+        "         [  7.07e-01 +0.00e+00j,   7.07e-01 +0.00e+00j,\n",
+        "           -1.99e-32 +7.22e-17j]]]))"
+       ]
+      }
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 101
     }
    ],
    "metadata": {}
