--- a/notebooks/Cahn-Hilliard-and-Diffusion.ipynb
+++ b/notebooks/Cahn-Hilliard-and-Diffusion.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:deb0dd5f98d7daef9db72d7a11f7913229d04e26e3a16576eb38a2cb2eee3415"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -72,13 +73,9 @@
       "\n",
       "$$ f(x, t) = D \\nabla^2 \\Big ( \\epsilon^2\\nabla^2  \\phi'(x, t) -  a^2 \\big [3\\phi'(x, t) \\bar{\\phi}^2 + 3\\phi'(x, t)^2 \\bar{\\phi} -\\phi'(x, t)^3\\big ] \\Big )$$\n",
       "\n",
-      "and define a scaled diffusion coefficient.\n",
-      "\n",
-      "$$\\tilde D = D a^2$$\n",
-      "\n",
       "Using these definitions, the Cahn-Hilliard equation can be cast in terms of a inhomogenous diffusion equation.\n",
       "\n",
-      "$$ \\frac{\\partial  \\phi'}{\\partial t} - \\tilde D \\nabla^2 \\phi' = f$$"
+      "$$ \\frac{\\partial  \\phi'}{\\partial t} - D a^2 \\nabla^2 \\phi' = f$$"
      ]
     },
     {
@@ -89,7 +86,7 @@
       "\n",
       "A green's function is a powerful method to solve linear inhomogenous differential equation. A green's function is mathematically define as function that when operated on with a linear operator, equals a delta function. Below is an example using the diffusion operator.\n",
       "\n",
-      "$$ \\frac{\\partial G(x-x',t-t')}{\\partial t} - \\tilde D\\nabla_x^2 G(x-x',t-t')  = \\delta(x-x') \\delta(t-t') $$"
+      "$$ \\frac{\\partial G(x-x,t-t')}{\\partial t} - \\tilde D a^2 \\nabla_x^2 G(x-x',t-t')  = \\delta(x-x') \\delta(t-t') $$"
      ]
     },
     {
@@ -98,15 +95,15 @@
      "source": [
       "The convolution of a green's function with an inhomogenous term gives the solution to the differential equation. This can be proven by first showing that a convolution with the left hand side of the equation above and an inhomogenous term $f(x', t')$ recovers the inhomogenous term.\n",
       "\n",
-      "$$ \\int_0^t \\int_V \\Big [\\frac{\\partial G(x - x',t - t')}{\\partial t} - \\tilde D\\nabla_x^2 G(x - x', t - t') \\Big ]f(x',t') dx' dt' = \\int_0^t \\int_V \\delta(x-x')\\delta(t - t') f(x', t')dx' dt' = f(x, t)$$\n",
+      "$$ \\int_0^t \\int_V \\Big [\\frac{\\partial G(x - x',t - t')}{\\partial t} - D a^2 \\nabla_x^2 G(x - x', t - t') \\Big ]f(x',t') dx' dt' = \\int_0^t \\int_V \\delta(x-x')\\delta(t - t') f(x', t')dx' dt' = f(x, t)$$\n",
       "\n",
       "By substituing the convolution expression for the inhomogenous term we get the following equation.\n",
       "\n",
-      "$$ \\frac{\\partial \\phi'}{\\partial t} - \\tilde D\\nabla_x^2 \\phi' = \\int_0^t \\int_V \\Big [\\frac{\\partial G(x - x',t - t')}{\\partial t} - \\tilde D\\nabla_x^2 G(x - x', t - t') \\Big ]f(x',t') dx' dt' $$\n",
+      "$$ \\frac{\\partial \\phi'}{\\partial t} - D a^2 \\nabla_x^2 \\phi' = \\int_0^t \\int_V \\Big [\\frac{\\partial G(x - x',t - t')}{\\partial t} - D a^2 \\nabla_x^2 G(x - x', t - t') \\Big ]f(x',t') dx' dt' $$\n",
       "\n",
       "Because the diffusion operator differientates with respect to $t$ and $x$ and the integral is with respect to $t'$ and $x'$, the operator can be pulled out of the integral.\n",
       "\n",
-      "$$ \\Bigg[ \\frac{\\partial }{\\partial t} - \\tilde D\\nabla_x^2 \\Bigg] \\phi' = \\Bigg[ \\frac{\\partial }{\\partial t} - \\tilde D\\nabla_x^2 \\Bigg]  \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$\n",
+      "$$ \\Bigg[ \\frac{\\partial }{\\partial t} - D a^2 \\nabla_x^2 \\Bigg] \\phi' = \\Bigg[ \\frac{\\partial }{\\partial t} - D a^2 \\nabla_x^2 \\Bigg]  \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$\n",
       "\n",
       "By removing the diffusion operator, we get an equation that relates the concentration $\\phi'$ to a convolution with the green's function and an inhomogenous term.\n",
       "\n",
@@ -114,7 +111,7 @@
       "\n",
       "If the initial conditions are inhomogenous, an additional term can be added to provide that information.\n",
       "\n",
-      "$$ \\phi' =  \\int_V G(x - x',t) \\phi(x', 0) dx' + \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$"
+      "$$ \\phi' =  \\int_V G(x - x',t) \\phi'(x', 0) dx' + \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$"
      ]
     },
     {
@@ -125,13 +122,19 @@
       "\n",
       "The solution to the equation above can be found in terms of a green's function. The general solution for the concentration $\\phi(x,t)$ has the following form.\n",
       "\n",
-      "$$ \\phi'(x, t) =  \\int_V G(x - x',t) \\phi(x', 0) dx' + \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$\n",
+      "Let\n",
       "\n",
-      "$$ \\phi'(x, t) =  \\int_V G(x - x',t) \\phi(x', 0) dx' +  \\int_0^t \\int_V G(x - x',t - t') D \\nabla_x^2 \\Big ( \\epsilon^2\\nabla_x^2  \\phi'(x', t') -  a^2 \\big [3\\phi'(x', t') \\bar{\\phi}^2 + 3\\phi'(x', t')^2 \\bar{\\phi} -\\phi'(x', t')^3\\big ] \\Big ) dx' dt' $$\n",
+      "$$ x - x' = r $$\n",
+      "$$ t - t' = \\tau $$\n",
+      "\n",
+      "$$ \\phi'(x, t) =  -\\int_V G(r,t) \\phi'(x - r, 0) dr + \\int_0^t \\int_V G(r,\\tau) f(x-r,t-\\tau) dr d\\tau $$\n",
+      "\n",
+      "\\begin{eqnarray} \\phi'(x, t) = && -\\int_V G(r,t) \\phi'(x-r, 0) dr +  \\\\&& \n",
+      "\\int_0^t \\int_V G(r,\\tau) D \\nabla_x^2 \\Big ( \\epsilon^2\\nabla_x^2  \\phi'(x-r, t-\\tau) -  a^2 \\big [3\\phi'(x-r, t-\\tau) \\bar{\\phi}^2 + 3\\phi'(x-r, t-\\tau)^2 \\bar{\\phi} -\\phi'(x-r, t-\\tau)^3\\big ] \\Big ) dr d\\tau \\end{eqnarray}\n",
       "\n",
       "The $\\nabla^2$ operator can be moved from the terms containing $\\phi$ to the green's function by using integration by parts and assuming periodic boundary conditions.\n",
       "\n",
-      "$$ \\phi'(x, t) =  \\int_V G(x - x',t) \\phi(x', 0) dx' +  \\int_0^t \\int_V \\nabla_x^4 G(x - x',t - t') D  \\epsilon^2 \\phi'(x', t') - \\nabla_x^2 G(x - x',t - t') D  \\Big ( a^2 \\big [3\\phi'(x', t') \\bar{\\phi}^2 + 3\\phi'(x', t')^2 \\bar{\\phi} -\\phi'(x', t')^3\\big ] \\Big ) dx' dt' $$"
+      "\\begin{eqnarray} \\phi'(x, t) = && -\\int_V G(r,t) \\phi'(x-r, 0) dr + \\int_0^t \\int_V D \\Big[\\nabla_x^4 G(r,\\tau)   \\epsilon^2 - 3 a^2 \\bar{\\phi}^2 \\nabla_x^2 G(r, \\tau) \\Big ] \\phi'(x-r, t-\\tau) dr d\\tau - \\\\&& \\int_0^t \\int_V 3 D \\bar{\\phi} a^2 \\nabla_x^2 G(r,\\tau)  \\phi'(x-r, t-\\tau)^2 dr d\\tau -  \\int_0^t \\int_V D a^2 \\nabla_x^2 G(r, \\tau) \\phi'(x - r, t - \\tau)^3 dr d\\tau \\end{eqnarray}"
      ]
     },
     {
@@ -147,143 +150,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "\\begin{eqnarray} \\phi'(x, t) = && \\int_V G(x - x',t) \\phi(x', 0) dx' + \\int_0^t \\int_V D \\Big[\\nabla_x^4 G(x - x',t - t')   \\epsilon^2 - 3 a^2 \\bar{\\phi}^2 \\nabla_x^2 G(x - x',t - t') \\Big ] \\phi'(x', t') dx' dt' - \\\\&& \\int_0^t \\int_V 3 D \\bar{\\phi} a^2 \\nabla_x^2 G(x - x',t - t')  \\phi'(x', t')^2 dx' dt' -  \\int_0^t \\int_V D a^2 \\nabla_x^2 G(x - x',t - t') \\phi'(x', t')^3 dx' dt' \\end{eqnarray}"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "In order to reduce the clutter during the substitutions, let's make the following create the following definitions.\n",
-      "\n",
-      "$$A(x - x',t) = G(x - x',t)$$\n",
-      "$$B(x - x', t - t') = D \\Big[\\nabla_x^4 G(x - x',t - t')   \\epsilon^2 - 3 a^2 \\bar{\\phi}^2 \\nabla_x^2 G(x - x',t - t') \\Big ]$$\n",
-      "$$C(x - x', t - t') = 3 D \\bar{\\phi} a^2 \\nabla_x^2 G(x - x',t - t') $$\n",
-      "$$E(x - x', t - t') = D  a^2 \\nabla_x^2 G(x - x',t - t')$$"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "$$ \\phi'(x, t) =  \\int_V A(x - x',t) \\phi(x', 0) dx' +  \\int_V \\int_0^t B(x - x', t - t') \\phi'(x', t') dx' dt' - \\int_V \\int_0^t  C(x - x', t - t')  \\phi'(x', t')^2 dx' dt' - \\int_V \\int_0^t  E(x - x',t - t') \\phi'(x', t')^3 dx' dt' $$"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "\\begin{eqnarray} \\phi'(x, t) = && \\int_V A(x - x',t) \n",
-      "\\phi(x', 0) dx'\n",
-      "+ \\\\&& \\int_V \\int_0^t B(x - x', t - t') \\Bigg [\n",
-      "\\Bigg ( \\int_V A(x' - x'',t) \n",
-      "\\phi(x'', 0) dx''\n",
-      "+ \\int_V \\int_0^t B(x' - x'', t' - t'') \n",
-      "\\phi'(x'', t'') \n",
-      "dx'' dt'' - \\int_V \\int_0^t  C(x' - x'', t' - t'')  \n",
-      "\\phi'(x'', t'')^2 \n",
-      "dx'' dt'' - \\int_V \\int_0^t  E(x' - x'',t' - t'') \n",
-      "\\phi'(x'', t'')^3 \n",
-      "dx'' dt'' \\Bigg )\n",
-      "\\Bigg ]dx' dt' - \\\\&& \\int_V \\int_0^t  C(x - x', t - t') \\Bigg [  \n",
-      "\\Bigg ( \\int_V A(x' - x'',t) \n",
-      "\\phi(x'', 0) dx''\n",
-      "+  \\int_V \\int_0^t B(x' - x'', t' - t'') \n",
-      "\\phi'(x'', t'') \n",
-      "dx'' dt'' - \\int_V \\int_0^t  C(x' - x'', t' - t'')  \n",
-      "\\phi'(x'', t'')^2 \n",
-      "dx'' dt'' - \\int_V \\int_0^t  E(x' - x'',t' - t'') \n",
-      "\\phi'(x'', t'')^3 \n",
-      "dx'' dt'' \\Bigg )^2\n",
-      "\\Bigg ]dx' dt' - \\\\ && \\int_V \\int_0^t  E(x - x',t - t')  \\Bigg [\n",
-      "\\Bigg (\\int_V A(x' - x'',t) \n",
-      "\\phi(x'', 0) dx''\n",
-      "+  \\int_V \\int_0^t B(x' - x'', t' - t'') \n",
-      "\\phi'(x'', t'') \n",
-      "dx'' dt'' - \\int_V \\int_0^t  C(x' - x'', t' - t'')  \n",
-      "\\phi'(x'', t'')^2 \n",
-      "dx'' dt'' - \\int_V \\int_0^t  E(x' - x'',t' - t'') \n",
-      "\\phi'(x'', t'')^3 \n",
-      "dx'' dt'' \\Bigg )^3\n",
-      "\\Bigg ] dx' dt' +... \\end{eqnarray}\n"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "\\begin{eqnarray} \\phi'(x, t) = && \\int_V A(x - x',t) \n",
-      "\\phi(x', 0) dx'\n",
-      "+ \\int_0^t \\int_V \\Bigg (\n",
-      "\\int_VA(x' - x'',t) \n",
-      "\\phi(x'', 0) dx''\\Bigg )\n",
-      " B(x - x', t - t')  dx' dt' - \\\\&&\n",
-      "\\int_0^t \\int_V \\Bigg ( \\int_V A(x' - x'',t) \n",
-      "\\phi(x'', 0) dx''\n",
-      "\\Bigg )^2\n",
-      "C(x - x', t - t') \n",
-      "dx' dt' - \n",
-      "\\int_0^t  \\int_V\n",
-      "\\Bigg (\\int_V A(x' - x'',t) \n",
-      "\\phi(x'', 0) dx'' \n",
-      " \\Bigg )^3\n",
-      "  E(x - x',t - t') \n",
-      "dx' dt' + ...\\end{eqnarray}"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "\\begin{eqnarray} \\phi'(x, t) = && \\int_V A(x - x',t) \n",
-      "\\phi(x', 0) dx'\n",
-      "+ \\int_0^t \\int_V  \\int_V  B(x - x', t - t') \n",
-      "A(x' - x'',t) \n",
-      "\\phi(x'', 0) dx'' dx' dt' - \\\\&&\n",
-      "\\int_0^t \\int_V  \\int_V \\int_V C(x - x', t - t')   \n",
-      "A(x' - x'',t) \n",
-      "\\phi(x'', 0) \n",
-      "A(x' - x''',t) \n",
-      "\\phi(x''', 0)dx''' dx''  dx' dt' - \\\\&&\n",
-      "\\int_0^t \\int_V  \\int_V \\int_V \\int_V E(x - x',t - t')  \n",
-      " A(x' - x'',t) \n",
-      "\\phi(x'', 0)  \n",
-      "A(x' - x''',t) \n",
-      "\\phi(x''', 0) \n",
-      "A(x' - x'''',t) \n",
-      "\\phi(x'''', 0) dx'''' dx''' dx'' dx' dt' + ...\\end{eqnarray}"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Now replacing $A$, $B$, $C$ and $E$ with their original definitions get the series expansion.\n",
-      "\n",
-      "\\begin{eqnarray}  \\phi'(x, t) = && \\int_V \n",
-      "G(x - x',t) \n",
-      "\\phi(x', 0) dx'\n",
-      "+ \\Bigg (\n",
-      "\\int_V\n",
-      "G(x - x'',t) \n",
-      "\\phi(x'', 0) dx''\\Bigg )\n",
-      "\\int_0^t \\int_V  \n",
-      "D \\Big[\\nabla_x^4 G(x - x',t - t')   \\epsilon^2 - 3 a^2 \\bar{\\phi}^2 \\nabla_x^2 G(x - x',t - t') \\Big ] \n",
-      "dx' dt' - \\\\ &&\n",
-      "\\Bigg ( \\int_V \n",
-      "G(x - x'',t) \n",
-      "\\phi(x'', 0) dx''\n",
-      "\\Bigg )^2\n",
-      "\\int_0^t \\int_V  \n",
-      "3 D \\bar{\\phi} a^2 \\nabla_x^2 G(x - x',t - t')\n",
-      "dx' dt' -\n",
-      "\\Bigg (\\int_V \n",
-      "G(x - x'',t) \n",
-      "\\phi(x'', 0) dx'' \n",
-      " \\Bigg )^3\n",
-      "\\int_0^t  \\int_V \n",
-      "D  a^2 \\nabla_x^2 G(x - x',t - t') \n",
-      "dx' dt' + ...\\end{eqnarray} "
+      "\\begin{eqnarray} \\phi'(x, t) = \n",
+      "&& -\\int_V G(r,t) \\phi'(x-r, 0) dr -\\int_0^t \\int_V \\int_V D \\Big[\\nabla_x^4 G(r,\\tau) \\epsilon^2 - 3 a^2 \\bar{\\phi}^2 \\nabla_x^2 G(r, \\tau) \\Big ]  G(r',t) \\phi'(x-r', 0) dr' dr d\\tau + ... \\end{eqnarray}"
      ]
     },
     {
